# ats-mini

./: .env.example  .envrc  .gitignore  BLUEDROID_MIGRATION.md  CONTRIBUTING.md  Makefile  SETUP.md  ats-mini.code-workspace  enable_ble.py  notes.md  platformio.ini  pyproject.toml  wait_monitor.py
.github/: copilot-instructions.md
.github/prompts/: plan-blueDroidMigration.prompt.md
.github/workflows/: build.yml  docs.yml  lint.yml
ats-mini/: CborRpc.cpp  CborRpc.h  Makefile  Network.cpp  Remote.cpp  Remote.h  sketch.yaml
ats_mini.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
changelog/: +rpc-buffer-optimization.changed.md  ble-fixes.fixed.md
client/: README.md  pyproject.toml
client/src/ats_cli/: __init__.py  cli.py  commands.py  main.py  terminal.py  tui.py
docs/source/: cbor_rpc_reference.md  conf.py  development.md  flash.md  index.md  manual.md
firmware/: Makefile
firmware/include/: Ble.h  Button.h  CborRpc.h  Common.h  Compression.h  Draw.h  EIBI.h  Menu.h  Remote.h  Rotary.h  SI4735-fixed.h  Storage.h  Themes.h  Utils.h  patch_init.h  tft_setup.h
firmware/src/: About.cpp  Battery.cpp  Ble.cpp  Button.cpp  CborRpc.cpp  Compression.cpp  Draw.cpp  EIBI.cpp  Layout-Default.cpp  Layout-SMeter.cpp  Menu.cpp  Network.cpp  Remote.cpp  Rotary.cpp  Scan.cpp  Station.cpp  Storage.cpp  Themes.cpp  Utils.cpp  ats-mini.cpp  ats-mini.ino
sdk/: LOGGING.md  README.md  enable_ble.py  pyproject.toml
sdk/src/ats_sdk/: __init__.py  base.py  ble.py  framing.py  legacy.py  radio.py  rpc.py
sdk/src/ats_sdk/transports/: __init__.py  ble.py  serial.py  websocket.py
sdk/tests/: README.md  conftest.py  enable_ble.py  test_rpc_ble.py  test_rpc_serial.py  test_rpc_ws.py
tools/: pio_fullflash.py  pio_post_upload.py  wait_monitor.py
tools/atsmini_rpc/: __init__.py  framing.py
tools/atsmini_rpc/tests/: test_rpc_serial.py  test_rpc_ws.py
