[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ats-mini"
version = "0.00"
requires-python = ">=3.12"

dependencies = [
  "towncrier",
  "pre-commit",
]

[dependency-groups]
dev = ["platformio", "pytest", "pytest-asyncio", "cbor2", "pyserial", "websockets", "ats-sdk", "ats-cli", "SCons", "black"]
docs = ["sphinx", "furo", "myst_parser", "sphinx-autobuild"]
test = ["pytest", "pytest-asyncio", "ats-sdk"]
rpc = ["pytest", "cbor2", "pyserial", "websockets", "ats-sdk"]

[tool.uv.sources]
ats-sdk = { path = "sdk", editable = true }
ats-cli = { path = "client", editable = true }

[tool.setuptools]
packages = []

[tool.uv]
required-version = ">=0.6.8"

[tool.towncrier]
name = "ATS Mini"
filename = "CHANGELOG.md"
template = "changelog/.template.jinja"
directory = "changelog/"
underlines = ["", "", ""]
title_format = "## {version} ({project_date})"
issue_format = "[#{issue}](https://github.com/esp32-si4732/ats-mini/issues/{issue})"

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Improved Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Misc"
showcontent = false
