[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=68.0", "wheel"]

[project]
name = "ats-mini"
requires-python = ">=3.11"
version = "0.00"

dependencies = [
  "towncrier",
  "pre-commit",
]

[dependency-groups]
dev = ["platformio", "pytest", "pytest-asyncio", "cbor2", "pyserial", "websockets", "ats-sdk", "ats-cli", "black"]
docs = ["sphinx", "furo", "myst_parser", "sphinx-autobuild"]
test = ["pytest", "pytest-asyncio", "ats-sdk"]

[tool.uv.sources]
ats-cli = {path = "client", editable = true}
ats-sdk = {path = "sdk", editable = true}

[tool.setuptools]
packages = []

[tool.uv]
required-version = ">=0.6.8"

[tool.towncrier]
directory = "changelog/"
filename = "CHANGELOG.md"
issue_format = "[#{issue}](https://github.com/esp32-si4732/ats-mini/issues/{issue})"
name = "ATS Mini"
template = "changelog/.template.jinja"
title_format = "## {version} ({project_date})"
underlines = ["", "", ""]

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Improved Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Misc"
showcontent = false
