[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ats-cli"
version = "0.2.0"
description = "ATS-Mini Modern TUI Client"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = ["ats-sdk>=0.2.0", "textual>=0.47.0"]

[project.scripts]
atsmini = "ats_cli.tui:main"

[project.urls]
Repository = "https://github.com/esp32-si4732/ats-mini"
Issues = "https://github.com/esp32-si4732/ats-mini/issues"

[tool.setuptools]
packages = ["ats_cli"]
package-dir = { "" = "src" }
